# Boid-Simulation

./: .gitignore  CMakeLists.txt  README.md  boids.c  boids.h  csdl.c  main.c  vectors.c  vectors.h
include/: boids.h  csdl.h  vectors.h
includes/: boids.hpp  params.hpp  simulation.hpp  vec2D.hpp  window.hpp
src/: boids.c  boids.cpp  boids.h  csdl.c  csdl.h  main.c  main.cpp  simulation.cpp  vectors.c  vectors.h  window.cpp
